--- a/TimeReport.API/appsettings.json
+++ b/TimeReport.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Connection": "server=(localdb)\\MSSQLLocalDB;database=TimeReport.API;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
